fix name overflow

--- a/app/assets/stylesheets/fellow.css
+++ b/app/assets/stylesheets/fellow.css
@@ -55,3 +55,7 @@ margin-left: 2%;
   height: 75px;
   color: white;
 }
+
+.grid figure .info{
+  top: 230px;
+}
